--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
 Revision history for Perl extension MarpaX::Grammar::Parser.
 
-1.02  Unreleased.
+1.02  Tue Sep  9 09:57:00 2014
 	- Remove redundant Algorithm::Diff from t/runner.t.
+	- Switch from Perl6::Slurp to File::Slurp.
+	- Update copy of Marpa's metag.bnf.
+	- Re-generate http://savage.net.au/Ron/html/graphviz2.marpa/Marpa.Grammar.svg.
 
 1.01  Fri Aug 16 14:53:00 2013
 	- Explicitly test for the files marpa_bnf_file and user_bnf_file. Die if missing.
