--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension MarpaX::Grammar::Parser.
 
+1.03  Fri Sep 19 11:40:00 2014
+	- Handle new Marpa output (from when it dumps its own grammar).
+	- Update Build.PL and Makefile.PL about this module being on github.
+	- Re-generate share/*.[cooked,raw].*.
+
 1.02  Tue Sep  9 09:57:00 2014
 	- Remove redundant Algorithm::Diff from t/runner.t.
 	- Switch from Perl6::Slurp to File::Slurp.
