--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension MarpaX::Grammar::Parser.
 
-1.07  Unreleased
+1.07  Wed Oct 22 16:13:00 2014
+	 - !!!!!!!!!!!!!!Unreleased
 	- Clean up search for first rule (in case there is no :start rule).
 	- Clean up visual breaks, which should have all be 50 chars long.
 
