Starting to convert tree output by Data::RenderAsTree into compressed tree

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension MarpaX::Grammar::Parser.
 
+2.00  Tue Mar 17 08:38:00 2015
+	- Replace Data::TreeDumper with Data::RenderAsTree.
+
 1.09  Fri Feb  6 09:21:00 2015
 	- Tree::DAG_Node V 1.24 changed the output indentation slightly, and the expected output was
 		hard-coded in t/basic.t, so that was fixed.
